# stringy-gpds

./: .gitignore  GPD_data.py  GPD_functions.py  LICENSE  MANIFEST.in  MSTWpdf.ipynb  MSTWpdf.py  README.md  StringBasedGPD.ipynb  aac_pdf.py  config.py  fit.py  helpers.py  mstw_pdf.py  plot.py  pyproject.toml  setup.cfg  stringy-gpds.code-workspace  stringy_gpds.py
stringy_gpds/: __init__.py  __inity__.py  aac_pdf.py  adim.py  config.py  core.py  fit.py  helpers.py  mstw_pdf.py  plot.py  regge.py  special.py  tabgen.py
stringy_gpds/pdfs/: AAC.csv  MSTW.csv
